--- a/catia.html
+++ b/catia.html
@@ -1,11 +1,21 @@
-<link rel="stylesheet" href="index.css">
-<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?lang=py&amp;skin="></script>
-<!DOCTYPE html>
-<html lang="en">
+
+<?xml version="1.0" encoding="iso-8859-1"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN">
+
+<html> 
+
+
+                        <!-- En tête du document; nom, métadonée...      -->
 <head>
+  <title> Hani Massinissa - Génie Mécanique  </title>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hani Massinissa</title>
+  <meta name="author" content="Hani Massinissa" />
+  <meta name="keywords" content="Génie Mécanique,Css, HTML" />
+  <meta name="description" content="Projet suite à l'introduction au XHTML du cours MEC1310" />
+    
+  <link rel="stylesheet" href="index.css">
+  <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?lang=py&amp;skin="></script>
+  
 </head>
 <body>
   
